@@ -2,11 +2,13 @@ plot.topo <- function(x,
                       water.z, water.col, water.lty, water.lwd,
                       land.z,   land.col,  land.lty,  land.lwd,
                       legend.loc="topright",
+                      mgp=getOption("oce.mgp"),
                       ...)
 {
     if (!inherits(x, "topo")) stop("method is only for topo objects")
     opar <- par(no.readonly = TRUE)
     on.exit(par(opar))
+    par(mgp=mgp)
 
     lat.range <- range(x$data$lat, na.rm=TRUE)
     asp <- 1 / cos(mean(lat.range)*pi/180)
@@ -22,8 +24,6 @@ plot.topo <- function(x,
         zr <- range(x$data$z, na.rm=TRUE)
     }
 
-    if (!"mgp" %in% names(list(...))) par(mgp = getOption("oce.mgp"))
-    mgp <- par("mgp")
     par(mar=c(mgp[1],mgp[1],0.5,0.5)) # 1.5 because density unit has superscript
 
     plot(range(x$data$lon, na.rm=TRUE), range(x$data$lat, na.rm=TRUE),
