@@ -9,7 +9,7 @@
 
 \usage{plot.ctd.scan(x, name = "scan", 
  S.col = "darkgreen", T.col= "darkred", p.col = "blue",
- adorn=NULL, \dots)
+ adorn=NULL, mgp=getOption("oce.mgp"), \dots)
 }
 
 \arguments{
@@ -24,6 +24,10 @@
     they are drawn from top-left to bottom-right.   If only a single
     string is provided, it is used for all panels.  (See
     \dQuote{Examples}.)}
+  \item{mgp}{3-element numerical vector to use for \code{par(mgp)}, and
+    also for \code{par(mar)}, computed from this.  The default is
+    tighter than the R default, in order to use more space for the data
+    and less for the axes.}
   \item{\dots}{optional arguments passed to plotting functions.}
 }
 
